# nexttrack

api/: Cargo.toml  demo_streaming.py  test_streaming.sh
api/src/: main.rs
web/: package-lock.json  package.json  pnpm-lock.yaml
web/app/: app.css  globals.css
web/app/nexttrack/: nexttrack.tsx  nexttrack_frontend.html
web/app/nexttrack/components/: AdvancedFilters.tsx  Header.tsx  PreferencesPanel.tsx  PresetButtons.tsx  RecommendationButton.tsx  RecommendationResult.tsx  TrackInput.tsx
web/app/nexttrack/constants/: presets.ts
web/app/nexttrack/hooks/: useRecommendationStream.ts
web/app/nexttrack/types/: index.ts
web/app/routes/: home.tsx
