[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.24.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
rand = "0.8"
urlencoding = "2.1"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
